# notebook

./: .env.dist  .gitignore  Taskfile.yml  docker-compose.yml
.github/workflows/: integration.yml  services-webapp.yml
1.git/: COMMIT_EDITMSG  FETCH_HEAD  config  index  packed-refs
1.git/logs/: HEAD
1.git/logs/refs/heads/: main
1.git/objects/pack/: pack-001c33881011025fccbb5e77f8022767ce0e4e5a.idx  pack-001c33881011025fccbb5e77f8022767ce0e4e5a.pack  pack-03715a2598a0a70da9444dffaefcfd8c9649f74e.idx  pack-03715a2598a0a70da9444dffaefcfd8c9649f74e.pack  pack-16ca8e84249797fb61df653312c9dfaa0c04ee90.idx  pack-16ca8e84249797fb61df653312c9dfaa0c04ee90.pack  pack-24d4a260d4ca70f71e7d6cdc62a8d874f1b1085c.idx  pack-24d4a260d4ca70f71e7d6cdc62a8d874f1b1085c.pack  pack-2ebd07f46ba3f4618bec832082d8f048b27a976a.idx  pack-2ebd07f46ba3f4618bec832082d8f048b27a976a.pack  pack-31d4b55b506554c241a29c584306f9cbf923a372.idx  pack-31d4b55b506554c241a29c584306f9cbf923a372.pack  pack-44e4f3ea22040ad0a71fc8ce550889db74488ab4.idx  pack-44e4f3ea22040ad0a71fc8ce550889db74488ab4.pack  pack-5ef028bdbeb66ec009d37cc617e606df9d3b55a5.idx  pack-5ef028bdbeb66ec009d37cc617e606df9d3b55a5.pack  pack-642674c91b111563dcc3fa4a704931222e02c58a.idx  (+29 more)
services/acme/: Dockerfile  entrypoint.sh
services/db/: Dockerfile
services/dba/: Dockerfile
services/docs/: Dockerfile  mkdocs.yml  pyproject.toml
services/docs/docs/: index.md
services/docs/docs/schedule/: program.md
services/docs/docs/schedule/lessons/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md  11.md
services/httpd/: Dockerfile  Taskfile.yml
services/webapp/: .env.dist  .flake8  .gitignore  Dockerfile  M-PT1-63-23.postman_collection.json  Taskfile.yml  manage.py  pyproject.toml  run_django.py  run_m63.py
services/webapp/alpha/: dirs.py  settings.py
services/webapp/app_alexander_sidorov/: admin.py  api.py  models.py  repositories.py  serializers.py  urls.py  views.py  viewsets.py
services/webapp/app_alexander_sidorov/migrations/: 0001_initial.py  0002_address.py  0003_tag.py  0004_alter_contact_id.py
services/webapp/app_alexander_sidorov/templates/app_alexander_sidorov/: base.html  contact_confirm_delete.html  contact_detail.html  contact_form.html  contact_list.html
services/webapp/app_dmitriy_zhdanovich/: apps.py  models.py  urls.py  views.py
services/webapp/app_dmitriy_zhdanovich/migrations/: 0001_initial.py
services/webapp/app_egor_pyshny/: apps.py  urls.py  views.py
services/webapp/app_ilya_putrich/: apps.py  urls.py  views.py
services/webapp/app_maksim_berezovik/: apps.py  models.py  urls.py  views.py
services/webapp/app_maksim_berezovik/contacts/: contact_actions.py  contact_routing.py  get_path_db.py  storages.py  usecases.py
services/webapp/app_maksim_berezovik/migrations/: 0001_initial.py  0002_alter_contact_name_alter_contact_phone_and_more.py  0003_alter_contact_user_id.py
services/webapp/app_nikita_harbatsevich/: apps.py  urls.py  views.py
services/webapp/app_vadim_zhurau/: apps.py  urls.py  views.py
services/webapp/config/: gunicorn.conf.py
services/webapp/ddd/contacts/: interfaces.py  repositories.py  usecases.py
services/webapp/ddd/contacts/entities/: v1.py
services/webapp/ddd/contacts/entities/v2/: __init__.py  addresses.py  contacts.py
services/webapp/framework/: debugging.py  exceptions.py  http.py  routing.py  telemetry.py
services/webapp/hw/maksim_berezovik/: Req for contacts.postman_collection.json  contacts.py  path_check.py  routing.py
services/webapp/project/: asgi.py  consts.py  db_routers.py  settings.py  urls.py  views.py
services/webapp/tests/alpha/: settings_test.py
services/webapp/tests/integration/: conftest.py  test_app.py
services/webapp/tests/integration/hw/maksim_berezovik/: test_routing.py
services/webapp/tests/unit/ddd/contacts/: entities_test.py
services/webapp/webapp/: asgi.py  exceptions.py
(+36 files in other folders)
