[tool.poetry]
authors = ["Alexander Sidorov <a375296648709@gmail.com>"]
description = "M-PT1-63-23 - Docs"
license = "MIT"
name = "docs.m-pt1-63-23"
version = "2023.03.01"


[tool.poetry.dependencies]
mkdocs-glightbox = "^0.3.4"
mkdocs-material = "^9.1.9"
python = "3.10.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
httpie = "^3.2.1"
ipython = "^8.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
